# The_Game

backend/: alembic.ini  docker-compose.yml  init-schema.sh  populate_TheGame.py  populate_reviews.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 23fd7375698a_review_approved_to_status.py  2bedc3fbe848_init_tables.py  92363acf724a_review_approved_to_status.py
backend/api/: __main__.py  app.py  choices.py  settings.py
backend/api/orm/: base.py  filters_parser.py  models.py  session.py
backend/api/repo/: base.py  exceptions.py  file.py  movie.py  review.py  role.py  user.py
backend/api/routes/: __init__.py  file.py  movie.py  movie_review.py  review.py  token.py  user.py  user_review.py
backend/api/routes/helpers/: movie.py
backend/api/routes/schemas/: base.py  movie.py  review.py  user.py
backend/api/services/: base.py  exceptions.py  file.py  movie.py  review.py  role.py  user.py
backend/api/services/schemas/: base.py  file.py  movie.py  review.py  role.py  user.py
backend/api/utils/: dto.py  exceptions.py  jwt_tool.py  strings.py  token_validator.py
frontend/: game.html  index.html  login.html  moderation.html  package-lock.json  package.json  profile.html  register.html
frontend/css/: styles.css
frontend/js/: api.js  index.js  login.js  moderation.js  movie.js  profile.js  register.js
