[tool.poetry]
name = "ratereel"
version = "0.1.0"
description = ""
authors = ["Lil-Boria_Yang <boris2002@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
requests = "^2.32.3"
parsel = "^1.9.1"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
